--- a/Workshop_2/Workshop_2/Workshop_2/Workshop_2/Workshop_2.vcxproj
+++ b/Workshop_2/Workshop_2/Workshop_2/Workshop_2/Workshop_2.vcxproj
@@ -115,6 +115,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Text.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Text.cpp" />
+    <ClCompile Include="w2.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="gutenberg_shakespeare" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="reflect.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
