--- a/Workshop_2/Workshop_2/Workshop_2/Workshop_2/Workshop_2.vcxproj.filters
+++ b/Workshop_2/Workshop_2/Workshop_2/Workshop_2/Workshop_2.vcxproj.filters
@@ -14,4 +14,22 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Text.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Text.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="w2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="gutenberg_shakespeare">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
