--- a/Workshop_2/Workshop_2/Workshop_2.vcxproj
+++ b/Workshop_2/Workshop_2/Workshop_2.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{19117455-93FA-4752-9BA7-F79D29B8C037}</ProjectGuid>
+    <ProjectGuid>{C03C3D61-AEF6-4295-B751-AD496A87B2F4}</ProjectGuid>
     <RootNamespace>Workshop2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -115,17 +115,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Text.h" />
+    <ClCompile Include="Workshop_2\Workshop_2\Text.cpp" />
+    <ClCompile Include="Workshop_2\Workshop_2\w2.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Text.cpp" />
-    <ClCompile Include="w2.cpp" />
+    <ClInclude Include="Workshop_2\Workshop_2\Text.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="gutenberg_shakespeare" />
+    <None Include="Workshop_2\Workshop_2\gutenberg_shakespeare" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="reflect.txt" />
+    <Text Include="Workshop_2\Workshop_2\reflect.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
