--- a/WS04/WS04/WS04.vcxproj.filters
+++ b/WS04/WS04/WS04.vcxproj.filters
@@ -38,4 +38,9 @@
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="reflect.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
