Finished creating lambda expression in main

--- a/WS05/WS05/WS05.vcxproj
+++ b/WS05/WS05/WS05.vcxproj
@@ -122,6 +122,9 @@
     <ClInclude Include="Grades.h" />
     <ClInclude Include="Letter.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="w5_grades.dat" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
