--- a/WS05/WS05/WS05.vcxproj.filters
+++ b/WS05/WS05/WS05.vcxproj.filters
@@ -30,4 +30,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="w5_grades.dat">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
