Adding notes for the week: STL Containers

--- a/Notes/STL_Containers/STL_Containers/STL_Containers.vcxproj
+++ b/Notes/STL_Containers/STL_Containers/STL_Containers.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{AA58955D-D810-4DC3-AF48-155D3E477095}</ProjectGuid>
-    <RootNamespace>FunctionPointers</RootNamespace>
+    <ProjectGuid>{F35020FE-DF9C-475A-A486-26EC8C04BEA5}</ProjectGuid>
+    <RootNamespace>STLContainers</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -76,7 +76,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <PreprocessToFile>false</PreprocessToFile>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -116,9 +116,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Array_Function_Pointers.cpp" />
-    <ClCompile Include="Function_Object.cpp" />
-    <ClCompile Include="Function_Pointers.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
