--- a/WS06/WS06/WS06.vcxproj
+++ b/WS06/WS06/WS06.vcxproj
@@ -115,6 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="prodUtil.cpp" />
     <ClCompile Include="w6.cpp" />
     <ClCompile Include="Product.cpp" />
     <ClCompile Include="TaxableProduct.cpp" />
