--- a/WS06/WS06/WS06.vcxproj.filters
+++ b/WS06/WS06/WS06.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="w6.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="prodUtil.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="iProduct.h">
