--- a/WS06/WS06/WS06.vcxproj
+++ b/WS06/WS06/WS06.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <None Include="sales.dat" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="reflect.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
