--- a/WS06/WS06/WS06.vcxproj.filters
+++ b/WS06/WS06/WS06.vcxproj.filters
@@ -47,4 +47,9 @@
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="reflect.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
