--- a/WS07/WS07/WS07/WS07.vcxproj
+++ b/WS07/WS07/WS07/WS07.vcxproj
@@ -124,6 +124,9 @@
   <ItemGroup>
     <ClCompile Include="w7.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="reflect.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
