--- a/WS07/WS07/WS07/WS07.vcxproj.filters
+++ b/WS07/WS07/WS07/WS07.vcxproj.filters
@@ -32,4 +32,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="reflect.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
