--- a/MS1/Files/.vscode/settings.json
+++ b/MS1/Files/.vscode/settings.json
@@ -31,6 +31,7 @@
         "utility": "cpp",
         "cmath": "cpp",
         "optional": "cpp",
-        "string_view": "cpp"
+        "string_view": "cpp",
+        "iomanip": "cpp"
     }
 }
