--- a/WS09/.vscode/tasks.json
+++ b/WS09/.vscode/tasks.json
@@ -8,8 +8,26 @@
             "type": "shell",
             "command": "g++",
             "args": [
-                "-g", "*.cpp"
+                "-Wall",
+                "-g",
+                "*.cpp",
+                "-pthread"
             ],
+            "problemMatcher": {
+                "owner": "cpp",
+                "fileLocation": [
+                    "relative",
+                    "${workspaceFolder}"
+                ],
+                "pattern": {
+                    "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
+                    "file": 1,
+                    "line": 2,
+                    "column": 3,
+                    "severity": 4,
+                    "message": 5
+                }
+            },
             "group": {
                 "kind": "build",
                 "isDefault": true
