--- a/Milestone/.vscode/tasks.json
+++ b/Milestone/.vscode/tasks.json
@@ -8,7 +8,7 @@
             "type": "shell",
             "command": "g++",
             "args": [
-                "-g", "*.cpp"
+                "-Wall", "-g", "*.cpp"
             ],
             "group": {
                 "kind": "build",
