--- a/Milestone/.vscode/settings.json
+++ b/Milestone/.vscode/settings.json
@@ -33,5 +33,6 @@
         "optional": "cpp",
         "string_view": "cpp",
         "iomanip": "cpp"
-    }
+    },
+    "C_Cpp.intelliSenseEngineFallback": "Disabled"
 }
