Add changes to matrix

--- a/OOP345SAA/Labs/Lab1/w1 in_lab/w1_in_lab/w1_in_lab/w1_in_lab.vcxproj
+++ b/OOP345SAA/Labs/Lab1/w1 in_lab/w1_in_lab/w1_in_lab/w1_in_lab.vcxproj
@@ -115,7 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="w1.cpp" />
     <ClCompile Include="process.cpp" />
     <ClCompile Include="String.cpp" />
   </ItemGroup>
