--- a/OOP345SAA/Labs/Lab1/w1 in_lab/w1_in_lab/w1_in_lab/w1_in_lab.vcxproj.filters
+++ b/OOP345SAA/Labs/Lab1/w1 in_lab/w1_in_lab/w1_in_lab/w1_in_lab.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClCompile Include="process.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Main.cpp">
+    <ClCompile Include="String.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="w1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="process.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="String.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
