--- a/OOP345SAA/Labs/WS02/w2_in_lab/w2_in_lab.vcxproj
+++ b/OOP345SAA/Labs/WS02/w2_in_lab/w2_in_lab.vcxproj
@@ -147,6 +147,9 @@
     <ClInclude Include="Text.h" />
     <ClInclude Include="TimeKeeper.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="gutenberg_shakespeare" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
