--- a/OOP345SAA/Labs/WS02/w2 at_home/w2 at_home.vcxproj.filters
+++ b/OOP345SAA/Labs/WS02/w2 at_home/w2 at_home.vcxproj.filters
@@ -33,4 +33,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="gutenberg_shakespeare">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
