--- a/OOP345SAA/Labs/WS03/in_lab/in_lab.vcxproj
+++ b/OOP345SAA/Labs/WS03/in_lab/in_lab.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{31669BD9-B13A-4AAB-B50E-7E2FBCBB7A96}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>inlab</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -139,14 +139,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="List.h" />
-    <ClInclude Include="LVPair.h" />
-  </ItemGroup>
-  <ItemGroup>
     <Text Include="Sales.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="List.cpp" />
+    <ClCompile Include="LVPair.cpp" />
     <ClCompile Include="w3.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="List.h" />
+    <ClInclude Include="LVPair.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
