--- a/OOP345SAA/Labs/WS03/at_home/w3_at_home.vcxproj
+++ b/OOP345SAA/Labs/WS03/at_home/w3_at_home.vcxproj
@@ -18,6 +18,19 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="WS03\WS03\List.cpp" />
+    <ClCompile Include="WS03\WS03\LVPair.cpp" />
+    <ClCompile Include="WS03\WS03\w3.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="WS03\WS03\List.h" />
+    <ClInclude Include="WS03\WS03\LVPair.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="WS03\WS03\References.txt" />
+    <Text Include="WS03\WS03\Sales.txt" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{DFE64083-8F64-481E-AAC2-6B6E0D012BA1}</ProjectGuid>
@@ -139,17 +152,6 @@
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="List.h" />
-    <ClInclude Include="LVPair.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="w3.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="References.txt" />
-    <Text Include="Sales.txt" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
