--- a/OOP345SAA/Labs/WS03/at_home/w3_at_home.vcxproj.filters
+++ b/OOP345SAA/Labs/WS03/at_home/w3_at_home.vcxproj.filters
@@ -15,24 +15,30 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="List.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="LVPair.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="w3.cpp">
+    <ClCompile Include="WS03\WS03\List.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WS03\WS03\LVPair.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WS03\WS03\w3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="References.txt">
-      <Filter>Resource Files</Filter>
+    <ClInclude Include="WS03\WS03\List.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WS03\WS03\LVPair.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="WS03\WS03\References.txt">
+      <Filter>Source Files</Filter>
     </Text>
-    <Text Include="Sales.txt">
-      <Filter>Resource Files</Filter>
+    <Text Include="WS03\WS03\Sales.txt">
+      <Filter>Source Files</Filter>
     </Text>
   </ItemGroup>
 </Project>
