Create specializations for class SummableLVPAir

--- a/OOP345SAA/Labs/WS03/at_home/w3_at_home.vcxproj.filters
+++ b/OOP345SAA/Labs/WS03/at_home/w3_at_home.vcxproj.filters
@@ -35,10 +35,10 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="WS03\WS03\References.txt">
-      <Filter>Source Files</Filter>
+      <Filter>Resource Files</Filter>
     </Text>
     <Text Include="WS03\WS03\Sales.txt">
-      <Filter>Source Files</Filter>
+      <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
 </Project>
