--- a/OOP345SAA/Labs/WS04/in_lab/in_lab.vcxproj
+++ b/OOP345SAA/Labs/WS04/in_lab/in_lab.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{E1850316-238A-4E1B-BCCD-D5D38FE4C9D9}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>inlab</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -139,10 +139,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Message.cpp" />
     <ClCompile Include="w4.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="w4_test.dat" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Message.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
