--- a/OOP345SAA/Labs/WS04/at_home/at_home.vcxproj
+++ b/OOP345SAA/Labs/WS04/at_home/at_home.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{5D602C4F-9791-4588-9721-32D95F14F48D}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>athome</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -139,10 +139,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Message.cpp" />
+    <ClCompile Include="MessagePack.cpp" />
     <ClCompile Include="w4.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="w4_test.dat" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Message.h" />
+    <ClInclude Include="MessagePack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
