--- a/OOP345SAA/Labs/WS04/at_home/at_home.vcxproj.filters
+++ b/OOP345SAA/Labs/WS04/at_home/at_home.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="MessagePack.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Notifications.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Message.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MessagePack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Notifications.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
