--- a/OOP345SAA/Labs/WS05/at_home/at_home.vcxproj.filters
+++ b/OOP345SAA/Labs/WS05/at_home/at_home.vcxproj.filters
@@ -26,12 +26,16 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <Text Include="PriceList.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="Student.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
+  <ItemGroup>
     <ClCompile Include="w5.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="PriceList.txt" />
-    <Text Include="Student.txt" />
   </ItemGroup>
 </Project>
