--- a/OOP345SAA/Labs/WS06/in_lab/in_lab.vcxproj
+++ b/OOP345SAA/Labs/WS06/in_lab/in_lab.vcxproj
@@ -139,6 +139,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Product.cpp" />
+    <ClCompile Include="Sale.cpp" />
     <ClCompile Include="w6.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -146,6 +148,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="iProduct.h" />
+    <ClInclude Include="Product.h" />
+    <ClInclude Include="Sale.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
