--- a/OOP345SAA/Labs/WS06/at_home/at_home.vcxproj.filters
+++ b/OOP345SAA/Labs/WS06/at_home/at_home.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Sale.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TaxableProduct.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Product.cpp">
@@ -33,6 +36,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="w6.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TaxableProduct.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
