DataTable skeleton complete

--- a/OOP345SAA/Labs/WS07/in_lab/in_lab.vcxproj.filters
+++ b/OOP345SAA/Labs/WS07/in_lab/in_lab.vcxproj.filters
@@ -15,16 +15,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DataTable.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Simple.dat" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="w7.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DataTable.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DataTable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
