--- a/OOP345SAA/Labs/WS07/in_lab/in_lab.vcxproj
+++ b/OOP345SAA/Labs/WS07/in_lab/in_lab.vcxproj
@@ -139,13 +139,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="DataTable.h" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Simple.dat" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DataTable.cpp" />
     <ClCompile Include="w7.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DataTable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
