--- a/OOP345SAA/OOP-Project/MS3/MS3.vcxproj
+++ b/OOP345SAA/OOP-Project/MS3/MS3.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="AssemblyLine.h" />
     <ClInclude Include="CustomerOrder.h" />
     <ClInclude Include="ItemSet.h" />
+    <ClInclude Include="LineManager.h" />
     <ClInclude Include="Station.h" />
     <ClInclude Include="Utilities.h" />
   </ItemGroup>
@@ -158,6 +159,7 @@
     <ClCompile Include="AssemblyLine.cpp" />
     <ClCompile Include="CustomerOrder.cpp" />
     <ClCompile Include="ItemSet.cpp" />
+    <ClCompile Include="LineManager.cpp" />
     <ClCompile Include="project.cpp" />
     <ClCompile Include="Station.cpp" />
     <ClCompile Include="Utilities.cpp" />
