--- a/OOP345SAA/OOP-Project/MS3/MS3.vcxproj.filters
+++ b/OOP345SAA/OOP-Project/MS3/MS3.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClInclude Include="Station.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LineManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyLine.cpp">
@@ -59,6 +62,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Station.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LineManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
